--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     class="home__blob-img"
                     x="12"
                     y="18"
-                    xlink:href="./surajsnap[1].jpg"
+                    xlink:href="./20210803_135609.png"
                   /> 
                 </g>
               </svg>
