--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./styles.css" />
 
     <title>Responsive Portfolio Website</title>
+      <script async src="https://cdn.splitbee.io/sb.js"></script>
 </head>
 
 <body>
