--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     class="home__blob-img"
                     x="12"
                     y="18"
-                    xlink:href="./photo_2022-08-10_11-08-23-removebg-preview.jpg"
+                    xlink:href="./20210803_135609.png"
                   /> 
                 </g>
               </svg>
