--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     class="home__blob-img"
                     x="12"
                     y="18"
-                    xlink:href="./20210803_135609.png"
+                    xlink:href="./0001.png"
                   /> 
                 </g>
               </svg>
